--- a/index.ipynb
+++ b/index.ipynb
@@ -532,19 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-249a79f2ac7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtv_shows\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'Seinfeld',\n",
+       " 'creators': ['Larry David', 'Jerry Seinfeld'],\n",
+       " 'genre': 'sitcom',\n",
+       " 'no_of_seasons': 10,\n",
+       " 'no_of_episodes': 180}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -576,7 +579,7 @@
     }
    ],
    "source": [
-    "tv_shows[2]['creators']"
+    "tv_shows[]['creators']"
    ]
   },
   {
